refactor: replace Apache Commons Base64 with JDK Base64 and address review feedback (#801)
- Added missing Apache License headers to new files
- Refactored test setup to use @BeforeEach for shared mocks
- Replaced Collections.singletonList with List.of where applicable
- Added Javadoc comments to improve API documentation

Closes #801